--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div class="row">
       <div class="col-md-4">
         <!-- Agrega tu foto aquí -->
-        <img src="daynee.jpeg" alt="Mi foto" class="img-fluid">
+        <img src="./assets/daynee.jpeg" alt="Mi foto" class="img-fluid">
       </div>
+      <a href="libre.html">pag2</a>
+      <a href="mate.html">matematicas</a>
+      <a href="libree.html">pag3</a>
       <div class="col-md-8">
         <h1>Lidia Dayne Ortiz Benitez</h1>
         <h3>Habilidades laborales</h3>
